--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,12 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+
+node_modules
+
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+variables.env
+variables.env.now
