--- a/package.json
+++ b/package.json
@@ -28,7 +28,13 @@
 		"passport": "^0.4.0",
 		"passport-local-mongoose": "^4.2.1",
 		"pug": "^2.0.0-rc.4",
-		"validator": "^8.2.0"
+		"validator": "^8.2.0",
+		"babel-cli": "^6.26.0",
+		"babel-core": "^6.26.0",
+		"babel-loader": "^7.1.2",
+		"babel-plugin-transform-object-rest-spread": "^6.26.0",
+		"babel-preset-es2015": "^6.24.1",
+		"nodemon": "^1.12.1"
 	},
 	"devDependencies": {
 		"babel-cli": "^6.26.0",
